--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* 
+    box-sizing: border-box
+
+body 
+    margin: 0
+
+.container
+    margin: auto
+    width: 100%
+    max-width: 1200px
