ADD code component

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<div class="search">
+    <div class="search-icon">
+        <i class="fa">&#xf002;</i>
+        <input type="text" name="search" placeholder="Search..">
+    </div>
+</div>
