--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -3,10 +3,11 @@ $font-text-shadow: 24px
 $shadow-text: 0.075em 0.08em 0.1em rgba(0, 0, 0, 1)
 $shadow-box: 0 1px 1px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12)
 $drop-shadow-logo: drop-shadow( 3px 3px 2px rgba(255, 255, 255, 0.7))
+$linear-background: linear-gradient(130deg, rgba(34,193,195,0.8) 0%, rgba(146,190,119,0.7) 80%, rgba(253,187,45,0.9) 100%)
 
 header
     background: rgb(34,193,195)
-    background: linear-gradient(130deg, rgba(34,193,195,1) 0%, rgba(146,190,119,1) 80%, rgba(253,187,45,1) 100%)
+    background: $linear-background
     box-shadow: $shadow-box
     .menu-flex
         display: flex
@@ -20,6 +21,7 @@ header
             padding: 10px 10px
             border-radius: 0
             transition: transform 0.5s ease-in-out
+            font-weight: bolder
         div:hover
             transform: scale(1.5)
         .menu-logo
