--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,3 +9,14 @@ body
     margin: auto
     width: 100%
     max-width: 1200px
+
+.carousel
+    height: 100%
+    .slick-list
+        height: 100%
+        .slick-track
+            height: 100%
+            .slide
+                height: 100%
+                img
+                    height: 100%
