ADD interface card

--- a/src/app/components/slide/slide.component.html
+++ b/src/app/components/slide/slide.component.html
@@ -15,7 +15,7 @@
     <div>
         <ngx-slick-carousel class="carousel" 
         #slickModal="slick-carousel" 
-        [config]="slideConfig" 
+        [config]="slideConfigSecond" 
         (init)="slickInit($event)"
         (breakpoint)="breakpoint($event)"
         (afterChange)="afterChange($event)"
