--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,7 +9,8 @@ body
     margin: auto
     width: 100%
     max-width: 1200px
-
+.slick-slide
+    height: 650px !important
 .carousel
     height: 100%
     .slick-list
