--- a/src/app/components/search/search.component.sass
+++ b/src/app/components/search/search.component.sass
@@ -24,7 +24,6 @@ $shadow-box-search: 0 1px 1px rgba(0,0,0,0.12),0 2px 2px rgba(0,0,0,0.12),0 4px 
         font-size: 24px
         justify-content: center
         transition: 2s
-
         i
             color: white
             font-size: 32px
@@ -51,8 +50,8 @@ $shadow-box-search: 0 1px 1px rgba(0,0,0,0.12),0 2px 2px rgba(0,0,0,0.12),0 4px 
             opacity: 0
             -webkit-transition: width 0.4s ease-in-out
             transition: visibility 0s, opacity 0.5s linear, width 0.4s ease-in-out
-            input[type=text]:focus
-            outline: 0
+            &:focus
+              outline: 0
 
 
 
@@ -61,8 +60,7 @@ $shadow-box-search: 0 1px 1px rgba(0,0,0,0.12),0 2px 2px rgba(0,0,0,0.12),0 4px 
         input[type=text]
             visibility: visible
             opacity: 1
-
-        input[type=text]:focus         
-            width: 70%
+            &:focus         
+              width: 70%
             
 
